Android: Talkback fix nesting level for single-level lists

Talkback would previously report nesting level for single-level lists,
which was considered unnecessary. Added functionality in the
IsHierarchical() method to determine if a list contains other lists,
or if it is contained within a list, to help determine if it is
hierarchical. Also modified DumpAccessibilityTree test expected output
files to check for new desired behavior.


R=dmazzoni@chromium.org

Bug: 591255
Change-Id: Idd995c5fae426b191825996cf02ee51bd6753607
Reviewed-on: https://chromium-review.googlesource.com/c/1300076
Commit-Queue: Akihiro Ota <akihiroota@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603624}
Former-commit-id: 375fd5fe73ecb39a3490f03e513491025430d20e