content/browser/accessibility/browser_accessibility_android.cc
@@ -51,6 +51,53 @@ enum {
   ANDROID_VIEW_ACCESSIBILITY_RANGE_TYPE_FLOAT = 1
 };
 
+static bool HasListAncestor(const content::BrowserAccessibility* node) {
+  if (node == nullptr)
+    return false;  // Base case
+
+  if (ui::IsStaticList(node->GetRole()))
+    return true;
+
+  return HasListAncestor(node->InternalGetParent());
+}
+
+static bool HasListDescendant(const content::BrowserAccessibility* current,
+                              const content::BrowserAccessibility* root) {
+  // Only check role of descendants
+  if (current != root) {
+    if (ui::IsStaticList(current->GetRole()))
+      return true;
+  }
+
+  int num_children = current->InternalChildCount();
+
+  for (int i = 0; i < num_children; ++i) {
+    if (HasListDescendant(current->InternalGetChild(i), root))
+      return true;
+  }
+  return false;
+}
+
+/*
+Determines:
+1. If this is an ancestor of any lists
+2. If this list is a descendant of any lists
+Talkback uses this information to report if the list has levels, and if so,
+which level is currently selected
+*/
+static bool IsHierarchicalList(const content::BrowserAccessibility* node) {
+  // Only makes sense to run if |node| is already a list
+  DCHECK(ui::IsStaticList(node->GetRole()));
+
+  if (node == nullptr)
+    return false;
+
+  bool found_list_in_descendants = HasListDescendant(node, node);
+  bool found_list_in_ancestors = HasListAncestor(node->InternalGetParent());
+
+  return (found_list_in_descendants || found_list_in_ancestors);
+}
+
 }  // namespace
 
 namespace content {
@@ -256,9 +303,8 @@ bool BrowserAccessibilityAndroid::IsHeading() const {
 }
 
 bool BrowserAccessibilityAndroid::IsHierarchical() const {
-  return (GetRole() == ax::mojom::Role::kList ||
-          GetRole() == ax::mojom::Role::kDescriptionList ||
-          GetRole() == ax::mojom::Role::kTree);
+  return (GetRole() == ax::mojom::Role::kTree ||
+          (ui::IsStaticList(GetRole()) && IsHierarchicalList(this)));
 }
 
 bool BrowserAccessibilityAndroid::IsLink() const {
