ui/accessibility/ax_role_properties.h
@@ -83,6 +83,8 @@ AX_EXPORT bool SupportsToggle(const ax::mojom::Role role);
 // Automation.
 AX_EXPORT bool IsUIASelectable(const ax::mojom::Role role);
 
+AX_EXPORT bool IsStaticList(const ax::mojom::Role role);
+
 }  // namespace ui
 
 #endif  // UI_ACCESSIBILITY_AX_ROLE_PROPERTIES_H_
